--- a/src/input.css
+++ b/src/input.css
@@ -7,3 +7,18 @@
 html {
   scroll-behavior: smooth;
 }
+
+ .animate-bounce-delay {
+        display: inline-block;
+        animation: bounce 1.2s infinite ease-in-out;
+    }
+
+    /* stagger the delays for each dot */
+    #modal-loader .dot:nth-child(1) { animation-delay: 0s; }
+    #modal-loader .dot:nth-child(2) { animation-delay: 0.2s; }
+    #modal-loader .dot:nth-child(3) { animation-delay: 0.4s; }
+
+    @keyframes bounce {
+        0%, 80%, 100% { transform: scale(0); }
+        40% { transform: scale(1); }
+    }
